crates/fossil-mir/tests/snapshots/rewrite_rules__r6_after.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", rewritten.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
        binding: "users.csv",
    },
    Extend {
        input: 3,
        field: "full_name",
        expr: ColRef {
            source: "",
            column: "name",
        },
    },
    Sink {
        input: 1,
        sink: GraphAr,
    },
    Project {
        input: 0,
        cols: [
            "id",
        ],
    },
]
