crates/fossil-mir/tests/snapshots/rewrite_rules__r6_before.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", graph.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
        binding: "users.csv",
    },
    Rename {
        input: 0,
        old: "name",
        new: "full_name",
    },
    Sink {
        input: 1,
        sink: GraphAr,
    },
]
