crates/fossil-mir/tests/snapshots/rewrite_rules__r7_after.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", rewritten.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
    },
    Extend {
        input: 0,
        field: "iri",
        expr: LitString(
            "ab",
        ),
    },
    Sink {
        input: 1,
        sink: GraphAr,
    },
]
