crates/fossil-mir/tests/snapshots/rewrite_rules__r7_before.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", graph.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
        binding: "users.csv",
    },
    Extend {
        input: 0,
        field: "iri",
        expr: Concat(
            LitString(
                "a",
            ),
            LitString(
                "b",
            ),
        ),
    },
    Sink {
        input: 1,
        sink: GraphAr,
    },
]
