crates/fossil-mir/tests/snapshots/rewrite_rules__r8_after.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", rewritten.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
    },
    Sink {
        input: 0,
        sink: GraphAr,
    },
]
