crates/fossil-mir/tests/snapshots/rewrite_rules__r9_before.snap
---
source: crates/fossil-mir/tests/rewrite_rules.rs
expression: "format!(\"{:#?}\", graph.ops(&db))"
---
[
    Source {
        uri: "users.csv",
        format: Csv,
        row_type: Ty(
            Id(401),
        ),
    },
    Filter {
        input: 0,
        pred: BinOp {
            op: Eq,
            lhs: LitString(
                "a",
            ),
            rhs: LitString(
                "b",
            ),
            ty: Ty(
                Id(402),
            ),
        },
    },
    Sink {
        input: 1,
        sink: GraphAr,
    },
]
